# civic_pulse

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  skills-lock.json
.superpowers/sdd/: task-2-report.md  task-4-report.md  task-5-report.md  task-6-report.md
benchmarks/: README.md  benchmark_manifest.json  incident_pair_metadata.json  manglish_complaint_pairs.json
benchmarks/reports/: hybrid-matching-v1.json  performance-budget.json
config/: matching_policy.json  normalization_aliases.json  performance_budget.json  priority_policy.json
data/: seed_complaints.json  sensitive_locations.json
docs/: demo-runbook.md  performance-report.md
frontend/: AGENTS.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.spec.ts  App.vue  main.ts
scripts/: __init__.py  generate_openapi_snapshot.py  generate_seed_fixture.py  openapi_snapshot.py  prewarm_model.py  run_embedding_benchmark.py  run_hybrid_benchmark.py  run_performance_budget.py  update_openapi_snapshot.py
src/civicpulse/: __init__.py  categorize.py  clustering.py  config.py  demo_seed.py  domain.py  embeddings.py  geo.py  incident_query.py  location.py  matching.py  normalize.py  performance.py  photos.py  priority.py  repository.py  runtime.py  service.py
src/civicpulse_dashboard/: __init__.py  api_client.py  api_errors.py  api_models.py  app.py  state.py
src/codex_hackathon.egg-info/: PKG-INFO  SOURCES.txt  (+2 more)
tests/: __init__.py  test_dependencies.py  test_embedding_benchmark.py
(+175 files in other folders)
